2010-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stefan Ernst:
	bug #27243: malloc: small error in comment
	* stdlib/malloc.c: Fix comment.

2010-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Aleksandar Kanchev:
	bug #27242: realloc: serious error when size shrinks
	* stdlib/realloc.c: Change freelist calculation.
	* tests/simulate/regression/bug-27242.c: New file.

2010-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/stdlib/malloc-4.c: New file.

2010-06-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Patch submitted by Stefan Ernst:
	patch #6895: Improved malloc behaviour when expanding used area
	bug #27235: malloc: Several things go wrong (part 1)
	* stdlib/malloc.c: Improve allocation strategy.
	* tests/simulate/regression/bug-27235-1.c: New file.

2010-06-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add some initial malloc and realloc tests to test
	suite.
	* tests/simulate/stdlib/malloc-1.c: New file.
	* tests/simulate/stdlib/malloc-2.c: (Ditto.)
	* tests/simulate/stdlib/malloc-3.c: (Ditto.)
	* tests/simulate/stdlib/realloc-1.c: (Ditto.)

2010-04-16  Anitha Boyapati <anitha.boyapati@atmel.com>

        Fix bug #28574.
	* include/avr/iox128d3.h - Modify EVSYS_t and ADC_t structures to 
	  include reserved registers.	
	* include/avr/iox16d4.h  - Same.
	* include/avr/iox192d3.h - Same.
	* include/avr/iox256d3.h - Same.
	* include/avr/iox32d4.h  - Same.
	* include/avr/iox64d3.h  - Same.

2010-04-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (CHECK_BUILTIN_DELAY_CYCLES): Reimplement as a
	compiler + grep pipeline rather than through AC_LINK_IFELSE, as we
	cannot rely on a working linker while building the library.

2010-04-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh: Fix directory name for ATxmega64A1U.

2010-04-06  Anitha Boyapati <anitha.boyapati@atmel.com>

        Fix bug #28584.
	* include/avr/iocanxx.h - Add word definitions CANIE and CANEN.
